--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "homepage": "https://phyoewaiaung.github.io/phyowaiaung.net/",
   "name": "my-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build" : "tsc -b && vite build",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -26,7 +23,8 @@
     "react": "^18.3.1",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-spring": "^9.7.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
