--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-cytoscapejs": "^1.2.5",
     "@types/react-router-dom": "^5.3.3",
     "cytoscape": "^3.30.2",
+    "framer-motion": "^11.7.0",
     "react": "^18.3.1",
     "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.3.1",
